Added a new post

--- a/_posts/2012-11-08-busy-busy.markdown
+++ b/_posts/2012-11-08-busy-busy.markdown
@@ -6,4 +6,11 @@ description: Just getting back to blogging. Life is good.
 ---
 Life is busy. That is all.
 
-I am returning my blog here because I finally learned what Markdown means, so I can use it now with my sweet Jekyll blog. Wish I'd learned about that sooner.
+I am returning my blog here because I finally learned what Markdown means, so
+I can use it now with my sweet Jekyll blog. Wish I'd learned about that sooner.
+
+Of interest to possibly nobody but me, I've started to use Vim quite a bit. I'm
+not sure how good it is for me, but it sure does feel cool. Someone on reddit
+posted a gif that pretty accurately portrays [how I feel when I use
+Vim](http://i.imgur.com/Lt9nB.gif). I'm nowhere near that cool, but I like the
+analogy.
